--- a/pom.xml
+++ b/pom.xml
@@ -94,11 +94,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-web</artifactId>-->
-        <!--</dependency>-->
-        <!-- spring boot end -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
 
         <!--metrics begin-->
         <dependency>
